Теперь все в реакте

--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -8,51 +8,54 @@
 </head>
 
 <body>
-    <header class="page-header">
-        <div class="topbar">
-            <div class="topbar-container">
-                <a href="/" class="icon-tasbar">Супер Ask</a>
-                <div class="topbar-right-user">
-                    <a href="#">Зарегистрироваться</a>
-                    <a href="#">Войти</a>
-                </div>
-            </div>
-        </div>
-    </header>
+    <div id="container">
+    
+    </div>
+    <!--<header class="page-header">-->
+        <!--<div class="topbar">-->
+            <!--<div class="topbar-container">-->
+                <!--<a href="/" class="icon-tasbar">Супер Ask</a>-->
+                <!--<div class="topbar-right-user">-->
+                    <!--<a href="#">Зарегистрироваться</a>-->
+                    <!--<a href="#">Войти</a>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</header>-->
 
-    <div class="all-content">
-        <div class="rsp-container">
-            <main class="page-main">
+    <!--<div class="all-content">-->
+        <!--<div class="rsp-container">-->
+            <!--<main class="page-main">-->
 
-                <div class="person-profile">
-                    <div class="person-profile-background">
-                        <div class="person-overlay">
-                            <div class="person-profile-wrapper">
-                                <a id="profile-picture"></a>
-                                <a class="profile-name">
-                                    <span class="block-link">Einshtein</span>
-                                    <span class="block-link">@id1</span>
-                                </a>
-                                <div class="profile-label">
-                                    <a class="profile-button">
-                                        Follow
-                                    </a>
-                                </div>
-                            </div>
+                <!--<div class="person-profile">-->
+                    <!--<div class="person-profile-background">-->
+                        <!--<div class="person-overlay">-->
+                            <!--<div class="person-profile-wrapper">-->
+                                <!--<a id="profile-picture"></a>-->
+                                <!--<a class="profile-name">-->
+                                    <!--<span class="block-link">Einshtein</span>-->
+                                    <!--<span class="block-link">@id1</span>-->
+                                <!--</a>-->
+                                <!--<div class="profile-label">-->
+                                    <!--<a class="profile-button">-->
+                                        <!--Follow-->
+                                    <!--</a>-->
+                                <!--</div>-->
+                            <!--</div>-->
                             
-                        </div>
-                    </div>
+                        <!--</div>-->
+                    <!--</div>-->
                     
-                    <div class="person-nav-menu">
-                        <nav class="menu-nav-bar">
-                            <a class></a>
-                            <a></a>
-                            <a></a>
-                        </nav>
-                    </div>
-                </div>
+                    <!--<div class="person-nav-menu">-->
+                        <!--<nav class="menu-nav-bar">-->
+                            <!--<a class></a>-->
+                            <!--<a></a>-->
+                            <!--<a></a>-->
+                        <!--</nav>-->
+                    <!--</div>-->
+                <!--</div>-->
 
-            </main>
+            <!--</main>-->
 
             <footer class="page-footer">
                 <section>
