--- a/public/lib/css/main.css
+++ b/public/lib/css/main.css
@@ -1,3 +1,23 @@
+textarea{
+    background: transparent;
+    border: none;
+    color: #333;
+    display: block;
+    outline: 0;
+    width: 100%;
+}
+h3{
+    display: block;
+    font-size: 1.17em;
+    font-weight: bold;
+    border: none;
+    margin: 0;
+    text-decoration: none;
+}
+form{
+    display: block;
+    margin-top: 0em;
+}
 a{
     color: #ff6647;
     cursor: pointer;
@@ -6,6 +26,13 @@ a{
 
 div{
     display: block;
+}
+span{
+    border: none;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
 }
 
 /*Header components*/
@@ -186,7 +213,6 @@ body{
 /*------------*/
 
 .main-content{
-    padding: 8px 0;
 }
 
 .item-pager{
@@ -271,8 +297,56 @@ body{
     content: '❤  ';
 }
 
-
+/*Right main page*/
 /*----------------*/
+
+.right-main-component{
+    float: right;
+    width: 300px;
+}
+
+
+.ask-box{
+    background: #ffffed;
+    overflow: initial;
+    word-wrap: break-word;
+    margin-bottom: 8px;
+}
+.ask-box>h3{
+    font-size: 18px;
+    padding: 15px;
+}
+
+#ask-form{
+    overflow: initial;
+}
+
+.question{
+    border: solid 1px #e6e6e6;
+    margin: 20px 15px 0;
+    padding: 10px;
+    background-color: #fff;
+    margin-top: 0;
+}
+#question_text{
+        font-size: 16px;
+        line-height: 22px;
+        min-height: 80px;
+        max-height: 250px;
+        resize: vertical;
+}
+
+#question_text>textarea{
+        min-height: 80px;
+        max-height: 250px;
+}
+
+.option-bar{
+    padding: 10px 15px;
+}
+
+/*-----------------*/
+
 .page-main-content{
     margin-left: 15px;
     margin-right: 15px;
@@ -289,6 +363,9 @@ body{
     padding: 5px;
 }
 
+.page-main{
+    padding: 8px 0;
+}
 /*Inside Componetns*/
 /*----------------*/
 .button-like{
