--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -18,4 +18,15 @@
 
     </footer>
     <script src="lib/source.js" charset="utf-8"></script>
+    <script  charset="utf-8">
+        // var xhr = new XMLHttpRequest();
+        // // var data = new FormData();
+        // // data.append('siska', 'some');
+        // var body = 'name=' + encodeURIComponent('siska') + '&super='+encodeURIComponent('puper');
+        // xhr.open("POST", '/', true);
+        // xhr.send(body);
+        // xhr.onreadystatechange = function (res) {
+        //     console.log(res);
+        // }
+    </script>
 </body>
