--- a/public/lib/css/main.css
+++ b/public/lib/css/main.css
@@ -299,7 +299,6 @@ body{
     padding: 0 10px;
     font-size: 16px;
 }
-
 .icon-like::before{
     /*content:'';*/
     content: '❤  ';
@@ -559,5 +558,19 @@ body{
 }
 
 .simple-form-item{
+    font-size: 12px;
+    color: #4a4a4a;
+    padding-bottom: 25px;
+}
 
+.btn-primary-wide{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: #ff643c;
+    color: #fff;
+    border: none;
+    padding: 9px 10px;
+    border-radius: 4px;
+    font-weight: bold;
+    padding: 7px 10px;
 }
