--- a/public/lib/css/main.css
+++ b/public/lib/css/main.css
@@ -574,3 +574,29 @@ body{
     font-weight: bold;
     padding: 7px 10px;
 }
+
+.strike-throught{
+    margin-top: 15px 0;
+}
+.strike-throught{
+    position: relative;
+    text-align: center;
+    color: #a8a8a8;
+    font-size: 13px;
+    font-weight: normal;
+    z-index: 1;
+    margin-top: 15px 0;
+}
+.strike-throught>span{
+    padding: 0 10px;
+    background: #fff;
+}
+.strike-throught::before{
+    border-top: solid 1px #d8d8d8;
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    right: 10px;
+    z-index:-1;
+}
