--- a/public/lib/css/main.css
+++ b/public/lib/css/main.css
@@ -474,13 +474,17 @@ body{
     white-space: normal;
     display: inline-block;
     vertical-align: middle;
+    padding-top:60px;
 }
 
 .box-head{
     min-width: 460px;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-    color: #333;
+     -webkit-border-bottom-left-radius: 0;
+     -webkit-border-bottom-right-radius: 0;
+    -moz-border-bottom-left-radius: 0;
+    -moz-border-bottom-right-radius: 0;
+    -ms-border-bottom-left-radius: 0;
+    -ms-border-bottom-right-radius: 0;
     font-size: 18px;
     line-height: 24px;
     text-align: center;
@@ -489,6 +493,8 @@ body{
     overflow: hidden;
     position: relative;
     border-radius: 4px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;    color: #333;
 }
 .box-title{
     padding: 15px 10px;
@@ -509,13 +515,12 @@ body{
 }
 
 .util-close::before{
-    content: '\e830';
+    /*content: '\e830';*/
+    content: '❤'
 }
 
 
 .box-body{
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
     border-radius: 4px;
     background: #fff;
     max-width: 720px;
@@ -523,6 +528,8 @@ body{
     overflow: hidden;
     position: relative;
     text-align: left;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 }
 
 .input-form-box{
@@ -539,7 +546,7 @@ body{
 
 .input-form-box{
     overflow: hidden;
-    margin: 0 10px;
+    margin: 0 0px;
     border-radius: 2px;
 }
 
@@ -558,12 +565,14 @@ body{
 }
 
 .simple-form-item{
+    margin-top: 10px;
     font-size: 12px;
     color: #4a4a4a;
     padding-bottom: 25px;
 }
 
 .btn-primary-wide{
+    cursor: pointer;
     margin-top: 10px;
     margin-bottom: 10px;
     background-color: #ff643c;
@@ -575,9 +584,16 @@ body{
     padding: 7px 10px;
 }
 
-.strike-throught{
-    margin-top: 15px 0;
+.strike-throught-bot::before{
+    border-top: solid 1px #d8d8d8;
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    right: 10px;
+    z-index:-1;
 }
+
 .strike-throught{
     position: relative;
     text-align: center;
