--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Ульта Твиттер</title>
+    <title>Вопрошалочка</title>
     <link rel="stylesheet" href="lib/css/main.css">
 </head>
 
